--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -9,21 +9,21 @@ jobs:
       matrix:
         include:
           - target: amd64
-            runs-on: buildjet-4vcpu-ubuntu-2204
+            runs-on: ubuntu-latest
             type: iso
           - target: arm64
-            runs-on: buildjet-4vcpu-ubuntu-2204-arm
+            runs-on: ubuntu-24.04-arm
             type: iso
           - target: pine
-            runs-on: buildjet-4vcpu-ubuntu-2204-arm
+            runs-on: ubuntu-24.04-arm
             type: tarball
             ref: pinephone
           - target: rpi
-            runs-on: buildjet-4vcpu-ubuntu-2204-arm
+            runs-on: ubuntu-24.04-arm
             type: tarball
             ref: rpi
           - target: tab
-            runs-on: buildjet-4vcpu-ubuntu-2204-arm
+            runs-on: ubuntu-24.04-arm
             type: tarball
             ref: pinetab
     runs-on: ${{ matrix.runs-on }}
@@ -38,7 +38,6 @@ jobs:
     - name: Install needed packages
       run: |
         rm -rf /var/lib/apt/lists/*
-        sed -i 's/jammy/noble/g' /etc/apt/sources.list
         apt-get update && apt-get install --reinstall sudo debootstrap mtools dosfstools qemu-user-static binfmt-support dpkg-dev -y
         ln -sfn /usr/share/debootstrap/scripts/gutsy /usr/share/debootstrap/scripts/noble
         dpkg -i debs/live-build_*_all.deb
