--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -13,8 +13,8 @@ BASEVERSION="devel"
 CODENAME="devel"
 
 # distribution version
-RELEASE="2"
-SUBVER=""
+RELEASE="3"
+SUBVER="~RC"
 VERSION="$(date +%Y).$RELEASE"
 
 # full image name
