--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -28,7 +28,7 @@ CHANNEL="all"
 DISTRO_NAME="Rhino Linux"
 
 # disk hostname
-NAME="rhino-live"
+NAME="phablet"
 
 # mirror to fetch packages from
 if [ $ARCH = arm64 ]; then 
