--- a/.github/workflows/pinetab-image.yml
+++ b/.github/workflows/pinetab-image.yml
@@ -5,15 +5,14 @@ on:
 
 jobs:
   build_tab_tarball:
-    runs-on: buildjet-4vcpu-ubuntu-2204-arm
+    runs-on: ubuntu-24.04-arm
     steps:
-    - uses: actions/checkout@v3.5.0
+    - uses: actions/checkout@v4
 
     - name: Install needed packages
       run: |
         sudo rm -rf /etc/apt/sources.list.d/microsoft-prod.list
         sudo rm -rf /var/lib/apt/lists/*
-        sudo sed -i 's/jammy/.\/devel/g' /etc/apt/sources.list
         sudo apt-get update && sudo apt-get install debootstrap mtools dosfstools qemu-user-static binfmt-support -y
         sudo ln -sfn /usr/share/debootstrap/scripts/gutsy /usr/share/debootstrap/scripts/lunar
         sudo dpkg -i debs/live-build_*_all.deb
@@ -29,24 +28,24 @@ jobs:
     - name: Build tarball
       run: sudo ./build.sh etc/terraform.conf
       
-    - uses: actions/cache@v3.3.1
+    - uses: actions/cache@v4
       with:
         path: binary/
         key: tar-tab-${{ github.run_id }}
 
   deploy_tab1:
     needs: build_tab_tarball
-    runs-on: buildjet-4vcpu-ubuntu-2204
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3.5.0
+    - uses: actions/checkout@v4
     
-    - uses: actions/cache@v3.3.1
+    - uses: actions/cache@v4
       with:
         path: binary/
         key: tar-tab-${{ github.run_id }}
         
     - name: Deploy to partition
-      run: sudo ./debos-docker -m 10G pinetab.yaml
+      run: source ./etc/terraform.conf && VER="${VERSION}${SUBVER}" && sudo ./debos-docker -t image:"Rhino-Linux-${VER}-pinetab.img" -m 10G pinetab.yaml
       
     - name: Place output folder
       run: sudo mkdir -p builds/tab
@@ -57,24 +56,24 @@ jobs:
         sudo xz -v builds/tab/Rhino*tab.img
         echo "IMGPTA=$(cd builds/tab; ls *.img.xz)" >> $GITHUB_ENV
 
-    - uses: actions/upload-artifact@v3.1.2
+    - uses: actions/upload-artifact@v4.3.3
       with:
         name: ${{ env.IMGPTA }}
         path: builds/tab/${{ env.IMGPTA }}
         
   deploy_tab2:
     needs: build_tab_tarball
-    runs-on: buildjet-4vcpu-ubuntu-2204
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3.5.0
+    - uses: actions/checkout@v4
     
-    - uses: actions/cache@v3.3.1
+    - uses: actions/cache@v4
       with:
         path: binary/
         key: tar-tab-${{ github.run_id }}
         
     - name: Deploy to partition
-      run: sudo ./debos-docker -m 10G pinetab2.yaml
+      run: source ./etc/terraform.conf && VER="${VERSION}${SUBVER}" && sudo ./debos-docker -t image:"Rhino-Linux-${VER}-pinetab2.img" -m 10G pinetab2.yaml
       
     - name: Place output folder
       run: sudo mkdir -p builds/tab2
@@ -85,7 +84,7 @@ jobs:
         sudo xz -v builds/tab2/Rhino*tab2.img
         echo "IMGPTB=$(cd builds/tab2; ls *.img.xz)" >> $GITHUB_ENV
 
-    - uses: actions/upload-artifact@v3.1.2
+    - uses: actions/upload-artifact@v4.3.3
       with:
         name: ${{ env.IMGPTB }}
         path: builds/tab2/${{ env.IMGPTB }}
